--- a/App/templates/marca/modificarMarca.html
+++ b/App/templates/marca/modificarMarca.html
@@ -3,24 +3,32 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
-    <div class="container p-2">
-        <h2>Modificar marca</h2>
-        <form action="editarMarca" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre de la marca a modificar</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre de la marca">
-            </div>
-            <div class="form-group">
-                <label for="nombreNuevo">Nuevo nombre de la marca</label>
-                <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar nuevo nombre de la marca">
-            </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
 
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %}
+
+            <div class="container p-2">
+                <h2>Modificar marca</h2>
+                <form action="{{ url_for('editarMarca')}}" method="POST">
+                    <div class="form-group">
+                        <label for="nombre">Nombre de la marca a modificar</label>
+                        <input readonly value="{{data[1]}}" type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar nombre de la marca">
+                    </div>
+                    <div class="form-group">
+                        <label for="nombreNuevo">Nuevo nombre de la marca</label>
+                        <input type="text" class="form-control" name="nombreNuevo" id="nombreNuevo" placeholder="Ingresar nuevo nombre de la marca">
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
+            </div>
+            {% include 'footer/footer.html' %}
+        </div>
 
     </div>
+
 </body>
 
 </html>
