--- a/App/templates/combo/altaCombo.html
+++ b/App/templates/combo/altaCombo.html
@@ -11,14 +11,14 @@
                 <label for="nombre">Nombre del combo</label>
                 <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del combo">
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="precio">Precio Total</label>
                 <input type="number" class="form-control" name="precioTotal" id="precioTotal" placeholder="Ingresar el precio del combo">
             </div>
             <div class="form-group">
                 <label for="descuento">Descuento</label>
                 <input type="number" class="form-control" name="descuento" id="descuento" placeholder="Ingresar el descuento del combo">
-            </div>
+            </div> -->
             <button type="submit" class="btn btn-primary">Aceptar</button>
 			<a class="btn btn-danger" href="/" role="button">Cancelar</a>
         </form>
