--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -7,22 +7,38 @@
     <div class="container p-2">
         <h2>Alta producto</h2>
         <form action="guardarProducto" method="POST">
-            <div class="form-group">
-                <label for="nombre">Nombre del producto</label>
-                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="nombre">Nombre del producto</label>
+                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="descripcion">Descripcion del producto</label>
+                        <input type="text" class="form-control" name="descripcion" id="descripcion" placeholder="Ingresar la descripcion del producto">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="descripcion">Descripcion del producto</label>
-                <input type="text" class="form-control" name="descripcion" id="descripcion" placeholder="Ingresar la descripcion del producto">
+
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="precio">Precio del producto</label>
+                        <input type="number" class="form-control" name="precio" id="precio" placeholder="Ingresar el precio del producto">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label for="modelo">Modelo del producto</label>
+                        <input type="text" class="form-control" name="modelo" id="modelo" placeholder="Ingresar el modelo del producto">
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="precio">Precio del producto</label>
-                <input type="number" class="form-control" name="precio" id="precio" placeholder="Ingresar el precio del producto">
-            </div>
-            <div class="form-group">
-                <label for="modelo">Modelo del producto</label>
-                <input type="text" class="form-control" name="modelo" id="modelo" placeholder="Ingresar el modelo del producto">
-            </div>
+
+
             <div class="form-group">
                 <label for="garantia">Garantía del producto</label>
                 <input type="number" class="form-control" name="garantia" id="garantia" placeholder="Ingresar la garantía en meses">
