--- a/App/templates/producto/altaProducto.html
+++ b/App/templates/producto/altaProducto.html
@@ -3,59 +3,102 @@
 {% include 'header/header.html' %}
 
 <body>
-    {% include 'navbars/navbar.html' %}
-    <div class="container p-2">
-        <h2>Alta producto</h2>
-        <form action="guardarProducto" method="POST">
+    <div class="d-flex" id="wrapper">
+        {% include 'navbars/sidebar.html' %}
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="nombre">Nombre del producto</label>
-                        <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="descripcion">Descripcion del producto</label>
-                        <input type="text" class="form-control" name="descripcion" id="descripcion" placeholder="Ingresar la descripcion del producto">
-                    </div>
-                </div>
-            </div>
+        <div id="page-content-wrapper">
+            {% include 'navbars/navbar.html' %}
 
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="precio">Precio del producto</label>
-                        <input type="number" class="form-control" name="precio" id="precio" placeholder="Ingresar el precio del producto">
+            <div class="container-fluid">
+                <h2>Alta producto</h2>
+                <form action="guardarProducto" method="POST">
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="nombre">Nombre del Producto</label>
+                                <input type="text" class="form-control" name="nombre" id="nombre" placeholder="Ingresar el nombre del producto">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="descripcion">Descripcion del producto</label>
+                                <input type="text" class="form-control" name="descripcion" id="descripcion" placeholder="Ingresar la descripcion del producto">
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="form-group">
-                        <label for="modelo">Modelo del producto</label>
-                        <input type="text" class="form-control" name="modelo" id="modelo" placeholder="Ingresar el modelo del producto">
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="precio">Precio del producto</label>
+                                <input type="number" class="form-control" name="precio" id="precio" placeholder="Ingresar el precio del producto">
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="modelo">Modelo del producto</label>
+                                <input type="text" class="form-control" name="modelo" id="modelo" placeholder="Ingresar el modelo del producto">
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="garantia">Garantía (Meses)</label>
+                                <select name="garantia" class="custom-select">
+                                    <option value="0"> 0 </option>
+                                    <option value="3"> 3  </option>
+                                    <option value="6"> 6  </option>
+                                    <option value="9"> 9  </option>
+                                    <option value="12"> 12  </option>
+                                    <option value="18"> 18  </option>
+                                    <option value="24"> 24  </option>
+                                </select>
+                            </div>
+                        </div>
+
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="tipoProducto">Tipo de producto</label>
 
 
-            <div class="form-group">
-                <label for="garantia">Garantía del producto</label>
-                <input type="number" class="form-control" name="garantia" id="garantia" placeholder="Ingresar la garantía en meses">
+                                <select name="tipoProducto" class="custom-select">
+                                    {% for e in data['TipoProducto'] %}                                     
+                                                                                   
+                                            <option value="{{e[0]}}">{{e[1]}}</option>
+                                       
+                                    {% endfor %}
+                                </select>
+
+
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="form-group">
+                                <label for="marca"> Marca del producto</label>
+                                <select name="marca" class="custom-select">
+                                    {% for e in data['marca'] %}                                     
+                                                                                   
+                                            <option value="{{e[0]}}">{{e[1]}}</option>
+                                       
+                                    {% endfor %}
+                                </select>
+
+                            </div>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Aceptar</button>
+                    <a class="btn btn-danger" href="/" role="button">Cancelar</a>
+                </form>
             </div>
-            <div class="form-group">
-                <label for="tipoProducto">ID de Tipo de producto</label>
-                <input type="number" class="form-control" name="tipoProducto" id="tipoProducto" placeholder="Ingresar el código del tipo de producto">
-            </div>
-            <div class="form-group">
-                <label for="marca">ID de la Marca del producto</label>
-                <input type="number" class="form-control" name="marca" id="marca" placeholder="Ingresar el código de la marca">
-            </div>
-            <button type="submit" class="btn btn-primary">Aceptar</button>
-            <a class="btn btn-danger" href="/" role="button">Cancelar</a>
-        </form>
+        </div>
     </div>
-
+    {% include 'footer/footer.html' %}
 </body>
 
 </html>
